--- a/README
+++ b/README
@@ -1,2 +1,7 @@
-Testing repository for my pyweek #14 platformer.
-simply run 'run.py'
+> You have infiltrated the secret underground lair of a mad scientist.
+> He has locked the door behind you and armed a bomb to destroy everything!
+
+You have 5 minutes to disarm the bomb and escape.  Can you do it?
+
+
+Created in one week for Pyweek #14.  I have had additions to the game since then and extended it slightly.  This game is meant to be funny with lots of unexpected ways to lose.  Be careful about everything that you do and use your imagination to find solutions.  You can do it!
