--- a/README
+++ b/README
@@ -5,3 +5,6 @@ You have 5 minutes to disarm the bomb and escape.  Can you do it?
 
 
 Created in one week for Pyweek #14.  I have had additions to the game since then and extended it slightly.  This game is meant to be funny with lots of unexpected ways to lose.  Be careful about everything that you do and use your imagination to find solutions.  You can do it!
+
+
+The meant to be run with python 2.7.
